# sorting_algorithm_visualizer

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/:  main.c  main.c  menu.c  menu.h  sorting.c  sorting.h  stats.c  stats.h  utils.c  utils.h  visual.c  visual.h
